HADOOP_SECURE_DN_USER way, kinit thread, docker capabilities

--- a/docker/test/integration/runner/compose/docker_compose_kerberized_hdfs.yml
+++ b/docker/test/integration/runner/compose/docker_compose_kerberized_hdfs.yml
@@ -2,7 +2,9 @@ version: '2.3'
 
 services:
   kerberizedhdfs1:
-    image: sequenceiq/hadoop-docker:2.7.0
+    cap_add:
+      - CAP_DAC_READ_SEARCH
+    image: ilejn/kerberized-hadoop:latest
     hostname: kerberizedhdfs1
     restart: always
     volumes:
@@ -10,22 +12,18 @@ services:
         - ${KERBERIZED_HDFS_DIR}/secrets:/usr/local/hadoop/etc/hadoop/conf
         - ${KERBERIZED_HDFS_DIR}/secrets/krb.conf:/etc/krb5.conf:ro
     ports:
-      - 50475:50475
-      - 50470:50470
+      - 1006:1006
+      - 50070:50070
+      - 9000:9000
     depends_on:
-        - hdfs_kerberos
+        - hdfskerberos
     entrypoint: /etc/bootstrap.sh -d
 
-  hdfs_kerberos:
-    # build: ${KERBERIZED_KAFKA_DIR}
-    image: arenadata/kdc:latest
-    hostname: hdfs_kerberos
+  hdfskerberos:
+    image: yandex/clickhouse-kerberos-kdc:latest
+    hostname: hdfskerberos
     volumes:
         - ${KERBERIZED_HDFS_DIR}/secrets:/tmp/keytab
         - ${KERBERIZED_HDFS_DIR}/../../kerberos_image_config.sh:/config.sh
         - /dev/urandom:/dev/random
     ports: [88, 749]
-    networks:
-      default:
-        aliases:
-          - hdfs.local
