--- a/tests/integration/test_storage_kerberized_hdfs/secrets/krb_ch.conf
+++ b/tests/integration/test_storage_kerberized_hdfs/secrets/krb_ch.conf
@@ -7,7 +7,7 @@
  default_realm = TEST.CLICKHOUSE.TECH
  dns_lookup_realm = false
  dns_lookup_kdc = false
- ticket_lifetime = 15d
+ ticket_lifetime = 15s
  # renew_lifetime = 15d
  forwardable = true
  default_tgs_enctypes = des3-hmac-sha1
