--- a/tests/integration/test_storage_kerberized_hdfs/secrets/krb.conf
+++ b/tests/integration/test_storage_kerberized_hdfs/secrets/krb.conf
@@ -7,8 +7,7 @@
  default_realm = TEST.CLICKHOUSE.TECH
  dns_lookup_realm = false
  dns_lookup_kdc = false
- ticket_lifetime = 15d
- # renew_lifetime = 15d
+ ticket_lifetime = 15s
  forwardable = true
  default_tgs_enctypes = des3-hmac-sha1
  default_tkt_enctypes = des3-hmac-sha1
