FastFloat library integration

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -403,6 +403,11 @@ if (USE_MSGPACK)
     target_include_directories (clickhouse_common_io SYSTEM BEFORE PUBLIC ${MSGPACK_INCLUDE_DIR})
 endif()
 
+if (USE_FAST_FLOAT)
+    target_link_libraries (clickhouse_common_io PRIVATE fast_float)
+    target_include_directories (clickhouse_common_io SYSTEM BEFORE PRIVATE ${FAST_FLOAT_INCLUDE_DIR})
+endif()
+
 if (USE_ORC)
     dbms_target_link_libraries(PUBLIC ${ORC_LIBRARIES})
     dbms_target_include_directories(SYSTEM BEFORE PUBLIC ${ORC_INCLUDE_DIR} ${CMAKE_BINARY_DIR}/contrib/orc/c++/include)
