--- a/.gitmodules
+++ b/.gitmodules
@@ -209,3 +209,6 @@
 [submodule "contrib/dragonbox"]
 	path = contrib/dragonbox
 	url = https://github.com/ClickHouse-Extras/dragonbox.git
+[submodule "contrib/fast_float"]
+	path = contrib/fast_float
+	url = https://github.com/lemire/fast_float
