--- a/docker/test/performance-comparison/Dockerfile
+++ b/docker/test/performance-comparison/Dockerfile
@@ -25,6 +25,7 @@ RUN apt-get update \
             python3 \
             python3-dev \
             python3-pip \
+            python3-setuptools \
             rsync \
             tree \
             tzdata \
