--- a/.gitmodules
+++ b/.gitmodules
@@ -197,7 +197,7 @@
 	url = https://github.com/danlark1/miniselect
 [submodule "contrib/rocksdb"]
 	path = contrib/rocksdb
-	url = https://github.com/facebook/rocksdb
+	url = https://github.com/ClickHouse-Extras/rocksdb.git 
 	branch = v6.14.5
 [submodule "contrib/xz"]
 	path = contrib/xz
