--- a/.gitmodules
+++ b/.gitmodules
@@ -211,4 +211,4 @@
 	url = https://github.com/ClickHouse-Extras/dragonbox.git
 [submodule "contrib/fast_float"]
 	path = contrib/fast_float
-	url = https://github.com/lemire/fast_float
+	url = https://github.com/fastfloat/fast_float
