--- a/contrib/CMakeLists.txt
+++ b/contrib/CMakeLists.txt
@@ -26,6 +26,7 @@ add_subdirectory (boost-cmake)
 add_subdirectory (cctz-cmake)
 add_subdirectory (consistent-hashing-sumbur)
 add_subdirectory (consistent-hashing)
+add_subdirectory (dragonbox-cmake)
 add_subdirectory (FastMemcpy)
 add_subdirectory (hyperscan-cmake)
 add_subdirectory (jemalloc-cmake)
@@ -321,5 +322,3 @@ endif()
 if (USE_INTERNAL_ROCKSDB_LIBRARY)
     add_subdirectory(rocksdb-cmake)
 endif()
-
-add_subdirectory(dragonbox)
