--- a/contrib/dragonbox-cmake/CMakeLists.txt
+++ b/contrib/dragonbox-cmake/CMakeLists.txt
@@ -1,5 +1,5 @@
-set(DRAGONBOX_INCLUDE_DIR ${ClickHouse_SOURCE_DIR}/contrib/dragonbox/include)
+set(LIBRARY_DIR "${ClickHouse_SOURCE_DIR}/contrib/dragonbox")
 
-add_library(dragonbox INTERFACE)
+add_library(dragonbox_to_chars "${LIBRARY_DIR}/source/dragonbox_to_chars.cpp")
 
-target_include_directories(dragonbox SYSTEM INTERFACE ${DRAGONBOX_INCLUDE_DIR})
+target_include_directories(dragonbox_to_chars SYSTEM BEFORE PUBLIC "${LIBRARY_DIR}/include/")
