--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -225,14 +225,14 @@ endif ()
 
 if (COMPILER_GCC OR COMPILER_CLANG)
     # to make numeric_limits<__int128> works with GCC
-    set (_CXX_STANDARD "-std=gnu++2a")
+    set (_CXX_STANDARD "gnu++2a")
 else()
-    set (_CXX_STANDARD "-std=c++2a")
+    set (_CXX_STANDARD "c++2a")
 endif()
 
 # cmake < 3.12 doesn't support 20. We'll set CMAKE_CXX_FLAGS for now
 # set (CMAKE_CXX_STANDARD 20)
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${_CXX_STANDARD}")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=${_CXX_STANDARD}")
 
 set (CMAKE_CXX_EXTENSIONS 0) # https://cmake.org/cmake/help/latest/prop_tgt/CXX_EXTENSIONS.html#prop_tgt:CXX_EXTENSIONS
 set (CMAKE_CXX_STANDARD_REQUIRED ON)
