yandex/clickhouse-kerberized-hadoop + missed header

--- a/docker/test/integration/kerberized_hadoop/Dockerfile
+++ b/docker/test/integration/kerberized_hadoop/Dockerfile
@@ -1,4 +1,5 @@
-# docker build -t ilejn/kerberized-hadoop .
+# docker build -t yandex/clickhouse-kerberized-hadoop .
+
 FROM sequenceiq/hadoop-docker:2.7.0
 RUN yum --quiet --assumeyes install krb5-workstation.x86_64
 RUN cd /tmp && \
