--- a/docker/test/integration/runner/compose/docker_compose_kerberized_hdfs.yml
+++ b/docker/test/integration/runner/compose/docker_compose_kerberized_hdfs.yml
@@ -4,7 +4,7 @@ services:
   kerberizedhdfs1:
     cap_add:
       - DAC_READ_SEARCH
-    image: ilejn/kerberized-hadoop:latest
+    image: yandex/clickhouse-kerberized-hadoop:latest
     hostname: kerberizedhdfs1
     restart: always
     volumes:
