--- a/.github/workflows/anchore-analysis.yml
+++ b/.github/workflows/anchore-analysis.yml
@@ -28,7 +28,7 @@ jobs:
         perl -pi -e 's|=\$version||g' Dockerfile
         docker build . --file Dockerfile --tag localbuild/testimage:latest      
     - name: Run the local Anchore scan action itself with GitHub Advanced Security code scanning integration enabled
-      uses: anchore/scan-action@master
+      uses: anchore/scan-action@main
       with:
         image-reference: "localbuild/testimage:latest"
         dockerfile-path: "docker/server/Dockerfile"
